# abacdsp

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  TODO.md  check_test_coverage.sh  main.cpp
.circleci/: config.yml
docker-unit-tests/: build-tests.sh  run-on-mac.sh  run-on-windows.bat  run-tests.sh
docker-unit-tests/aarch64/: Dockerfile.valgrind
docker-unit-tests/x86_64/: Dockerfile.valgrind
documentation/Filters/BandpassImpulses/: BpImpulseExplore.cpp  BpParaPerformanceSize.cpp  BpParallelPerformance.cpp  CMakeLists.txt  ResoVoiceExplore.cpp
documentation/Filters/SincFilterDesign/: Readme.md  SincFilter.class.template  generate_filter.m  make_filter.m  measure_filter.m
documentation/Numbers/: Approximations_generated.h  README.md  cosine_approximation.sh  generateApproximations.py  sine_approximation.sh  sine_approximation5.sh
documentation/Plot/: PyConPlot.py
documentation/Reverbs/FDN/: CMakeLists.txt  README.md  performanceFdnWalshAndBlockDelay.cpp
documentation/VelvetNoise/: CMakeLists.txt  VelvetNoise.cpp
examples/: README.md
examples/delay/: CMakeLists.txt  init-project.sh
examples/delay/src/: DelayConstants.h  DelayEditor.h  DelayProcessor.cpp  DelayProcessor.h  UiElements.h
examples/delay/src/impl/: DelayImpl.h  EffectBase.h  GenericImpl.h
examples/delay/src/inc/: CpuMeter.h  LookAndFeel.h  SpectrogramDisplay.h  WaveformMeter.h
examples/delay/src/unittests/: CMakeLists.txt  Delay_tests.cpp
examples/guisandbox/: CMakeLists.txt
examples/guisandbox/src/: GuisandboxConstants.h  GuisandboxEditor.h  GuisandboxProcessor.cpp  GuisandboxProcessor.h  UiElements.h
examples/juliasynth/: .gitignore  CMakeLists.txt
examples/juliasynth/src/: JuliasynthConstants.h  JuliasynthEditor.h  JuliasynthProcessor.cpp  JuliasynthProcessor.h  UiElements.h
examples/minireverb/: CMakeLists.txt
examples/minireverb/src/: MinireverbConstants.h  MinireverbEditor.h  MinireverbProcessor.cpp  MinireverbProcessor.h  UiElements.h
examples/minireverb/src/unittests/: CMakeLists.txt  Minireverb_tests.cpp
examples/sampleplayer/: CMakeLists.txt  init-project.sh
examples/sampleplayer/src/: SamplePlayerConstants.h  SamplePlayerEditor.h  SamplePlayerProcessor.cpp  SamplePlayerProcessor.h  UiElements.h
src/: Skeleton.h
src/includes/Analysis/: EnvelopeFollower.h  FftSmall.h  OctaveBandAnalyzer.h  SimpleStats.h  Spectrogram.h  YinPitchDetector.h  ZeroCrossings.h
src/includes/Audio/: AudioBuffer.h  FixedSizeProcessor.h
src/includes/AudioFile/: AudioFileIO.h  LoadOgg.h  LoadWav.h  SaveWav.h
src/includes/BlockProcessors/: BlockProcHighpass.h  BlockProcLowpass.h  BlockProcPitch.h  BlockProcVibrato.h  BlockProcessorBase.h  README.md
src/includes/Delays/: DispersionDelay.h  FracReadHead.h  ModulationDelay.h  NaiveDelay.h  OuModDelay.h  ParallelPlainDelay.h  PitchFadeWindowDelay.h
src/includes/Diffuser/: AllpassDelay.h  DiffusorDelayChain.h  SchroederAllpass.h  SchroederDiffuser.h
src/includes/Diffusor/: AllpassDelay.h  DiffuserDelayChain.h
src/includes/Filters/: Biquad.h  BiquadResoBP.h  BiquadResoBPParallelSIMD.h  BiquadResoBandPassParallel.h  LadderFilter.h  OnePoleFilter.h  PinkFilter.h
src/includes/Generators/: Excitation.h  JuliaWalk.h  OrnsteinUhlenbeckProcess.h  ResoGenerator.cpp  ResoGenerator.h  ResoParallelSIMD.h  ResoVoice.h
src/includes/Helpers/: ConstructArray.h  CreateExpectedSet.h
src/includes/Modulation/: Flutter.h  Wow.h
src/includes/NaiveGenerators/: Generator.h
src/includes/NonLinear/: SimpleHysteresis.h
src/includes/Numbers/: Approximations.h  BulgeControl.h  Conversions.h  Convert.h  Interpolation.h  PrimeDispatcher.h
src/includes/Parameters/: LinearParameter.h  SmoothingParameter.h  VelocityMapping.h
src/includes/Reverbs/: FdnReverb.h  FdnTankBlockDelay.h  FdnTankBlockDelaySIMD.h  FdnTankBlockDelayWalsh.h  FdnTankBlockDelayWalshSIMD.h  FdnTankRef.h  FdnTankSpiced.h  FdnTankSpicedBase.h  Hadamard16.h  Hadamard32.h  Hadamard4.h  Hadamard8.h  HadamardFeed.h  HadamardFeed12.h  HadamardFeed16.h  HadamardFeed2.h  HadamardFeed20.h  HadamardFeed24.h  HadamardFeed28.h  HadamardFeed32.h  HadamardFeed36.h  HadamardFeed4.h  HadamardFeed40.h  HadamardFeed44.h  HadamardFeed48.h  HadamardFeed52.h  HadamardFeed56.h  HadamardFeed60.h  HadamardFeed64.h  HadamardFeed8.h  HadamardWalsh16.h  HadamardWalsh32.h  README.md  (+4 more)
test/: CMakeLists.txt
test/Analysis/: EnvelopeFollower_test.cpp  FftSmall_test.cpp  OctaveBandAnalyzer_test.cpp  SimpleStats_test.cpp  YinPitchDetector_test.cpp  ZeroCrossings_test.cpp
test/Audio/: AudioBufferTest.cpp  AudioBuffer_test.cpp  FixedSizeProcessorTest.cpp  FixedSizeProcessor_test.cpp
test/AudioFile/: AudioFileIO_test.cpp
test/BlockProcessors/: BlockProcVibrato_test.cpp
test/Delays/: DispersionDelay_test.cpp  FracReadHead_test.cpp  ModulationDelay_test.cpp  NaiveDelay_test.cpp  OuModDelay_test.cpp  ParallelPlainDelay_test.cpp
test/Diffuser/: DiffuserDelayChain_test.cpp  SchroederAllpass_test.cpp
test/Filters/: BiquadResoBPParallelSIMD_test.cpp  BiquadResoBP_test.cpp  BiquadResoBandPassParallel_test.cpp  Biquad_test.cpp  LadderFilter_test.cpp  OnePoleFilter_test.cpp  PinkFilter_test.cpp
test/Generators/: JuliaWalk_test.cpp  OrnsteinUhlenbeckProcess_test.cpp
test/Helpers/: ConstructArray_test.cpp  CreateExpectedSet_test.cpp
test/Modulation/: Flutter_test.cpp  Wow_test.cpp
test/NaiveGenerators/: NaiveGenerators_test.cpp
test/NonLinear/: SimpleHysteresis_test.cpp
test/Numbers/: Approximations_test.cpp  BulgeControl_test.cpp  Conversions_test.cpp  Convert_test.cpp  Interpolation_test.cpp  PrimeDispatcher_test.cpp
test/Parameters/: LinearParameterTest.cpp  LinearParameter_test.cpp  VelocityMapping_test.cpp
test/Reverbs/: FdnReverb16_test.cpp  FdnReverb32_test.cpp  FdnReverb4_test.cpp  FdnReverb8_test.cpp  FdnReverbSpiced_test.cpp  HadamardFeed_test.cpp
test/Sampler/: ResamplingPitchShifter_test.cpp  SamplePlayerBasic_test.cpp  StretchSamplePlayer_test.cpp  StretchedSampleProducer_test.cpp
test/Wavetables/: WaveTableOscillator_test.cpp  WaveTableStorage_test.cpp
(+36 files in other folders)
